crates/nika-cadence/src/snapshots/nika_cadence__tests__emit__launchd_per_beat_env.snap
---
source: crates/nika-cadence/src/tests/emit.rs
expression: text
---
# ── nika.arm.weekly.plist
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<!-- nika arm · GENERATED from /projet/nika.yaml · beat weekly · do not hand-edit · regenerated by nika arm emit launchd -->
<plist version="1.0">
<dict>
	<key>Label</key>
	<string>nika.arm.weekly</string>
	<key>ProgramArguments</key>
	<array>
		<string>/bin/sh</string>
		<string>-c</string>
		<string>. &apos;/projet/.env&apos; &amp;&amp; exec &apos;/usr/local/bin/nika&apos; &apos;arm&apos; &apos;fire&apos; &apos;weekly&apos;</string>
	</array>
	<key>WorkingDirectory</key>
	<string>/projet</string>
	<key>StartCalendarInterval</key>
	<array>
		<dict>
			<key>Hour</key>
			<integer>9</integer>
			<key>Minute</key>
			<integer>7</integer>
			<key>Weekday</key>
			<integer>1</integer>
		</dict>
	</array>
	<key>StandardOutPath</key>
	<string>/projet/.nika/arm/logs/weekly.out</string>
	<key>StandardErrorPath</key>
	<string>/projet/.nika/arm/logs/weekly.err</string>
</dict>
</plist>

# ── nika.arm.nightly.plist
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<!-- nika arm · GENERATED from /projet/nika.yaml · beat nightly · do not hand-edit · regenerated by nika arm emit launchd -->
<plist version="1.0">
<dict>
	<key>Label</key>
	<string>nika.arm.nightly</string>
	<key>ProgramArguments</key>
	<array>
		<string>/bin/sh</string>
		<string>-c</string>
		<string>. &apos;/projet/.env&apos; &amp;&amp; exec &apos;/usr/local/bin/nika&apos; &apos;arm&apos; &apos;fire&apos; &apos;nightly&apos;</string>
	</array>
	<key>WorkingDirectory</key>
	<string>/projet</string>
	<key>StartCalendarInterval</key>
	<array>
		<dict>
			<key>Day</key>
			<integer>1</integer>
			<key>Hour</key>
			<integer>3</integer>
			<key>Minute</key>
			<integer>0</integer>
		</dict>
		<dict>
			<key>Day</key>
			<integer>1</integer>
			<key>Hour</key>
			<integer>3</integer>
			<key>Minute</key>
			<integer>30</integer>
		</dict>
	</array>
	<key>StandardOutPath</key>
	<string>/projet/.nika/arm/logs/nightly.out</string>
	<key>StandardErrorPath</key>
	<string>/projet/.nika/arm/logs/nightly.err</string>
</dict>
</plist>
