crates/nika-cadence/src/snapshots/nika_cadence__tests__emit__launchd_serve.snap
---
source: crates/nika-cadence/src/tests/emit.rs
expression: text
---
# ── nika.serve.plist
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<!-- nika arm · GENERATED from /projet/nika.yaml · serve · do not hand-edit · regenerated by nika arm emit launchd -->
<plist version="1.0">
<dict>
	<key>Label</key>
	<string>nika.serve</string>
	<key>ProgramArguments</key>
	<array>
		<string>/usr/local/bin/nika</string>
		<string>serve</string>
	</array>
	<key>WorkingDirectory</key>
	<string>/projet</string>
	<key>KeepAlive</key>
	<true/>
	<key>StandardOutPath</key>
	<string>/projet/.nika/arm/logs/nika.serve.out</string>
	<key>StandardErrorPath</key>
	<string>/projet/.nika/arm/logs/nika.serve.err</string>
</dict>
</plist>
