crates/nika-cadence/src/snapshots/nika_cadence__tests__emit__systemd_per_beat_env.snap
---
source: crates/nika-cadence/src/tests/emit.rs
expression: text
---
# ── nika.arm.weekly.timer
# nika arm · GENERATED from /projet/nika.yaml · beat weekly · do not hand-edit · regenerated by nika arm emit systemd
[Unit]
Description=nika arm · beat weekly (workflows/weekly.nika)

[Timer]
OnCalendar=Mon *-*-* 09:07:00 Europe/Paris
Persistent=true

[Install]
WantedBy=timers.target

# ── nika.arm.weekly.service
# nika arm · GENERATED from /projet/nika.yaml · beat weekly · do not hand-edit · regenerated by nika arm emit systemd
[Unit]
Description=nika arm fire · weekly

[Service]
Type=oneshot
ExecStart=/usr/local/bin/nika arm fire weekly
WorkingDirectory=/projet
EnvironmentFile=/projet/.env

# ── nika.arm.nightly.timer
# nika arm · GENERATED from /projet/nika.yaml · beat nightly · do not hand-edit · regenerated by nika arm emit systemd
[Unit]
Description=nika arm · beat nightly (workflows/nightly.nika)

[Timer]
OnCalendar=*-*-01 03:00,30:00 Europe/Paris
Persistent=false

[Install]
WantedBy=timers.target

# ── nika.arm.nightly.service
# nika arm · GENERATED from /projet/nika.yaml · beat nightly · do not hand-edit · regenerated by nika arm emit systemd
[Unit]
Description=nika arm fire · nightly

[Service]
Type=oneshot
ExecStart=/usr/local/bin/nika arm fire nightly
WorkingDirectory=/projet
EnvironmentFile=/projet/.env
