crates/nika-cadence/src/snapshots/nika_cadence__tests__emit__systemd_serve.snap
---
source: crates/nika-cadence/src/tests/emit.rs
expression: text
---
# ── nika.serve.service
# nika arm · GENERATED from /projet/nika.yaml · serve · do not hand-edit · regenerated by nika arm emit systemd
[Unit]
Description=nika serve · the machine edge

[Service]
Type=simple
Restart=on-failure
ExecStart=/usr/local/bin/nika serve
WorkingDirectory=/projet

[Install]
WantedBy=default.target
